<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@color/pink"
    tools:context=".ui.favoriten.FavoritenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/favorit_ueberschrift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/favorit_überschrift"
            android:textAppearance="@style/circle_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/black_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/account_separation_line"
            android:src="@drawable/black_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorit_ueberschrift" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/favorit_bett1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true">

            <ImageButton
                android:id="@+id/favorit_bett"
                android:layout_width="151dp"
                android:layout_height="134dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/favorit_description"
                android:scaleType="fitXY"
                android:src="@drawable/bed1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/produkt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kinderbett_classic"
                android:textAppearance="@style/circle_title"
                app:layout_constraintBottom_toTopOf="@+id/icon_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/favorit_bett"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon_add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/favorit_description"
                android:src="@drawable/ic_shopping_bag_black_24dp"
                app:layout_constraintStart_toStartOf="@+id/produkt_name"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/favorit_description"
                android:src="@drawable/delete"
                app:layout_constraintStart_toEndOf="@+id/icon_add_to_cart"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/black_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/account_separation_line"
            android:src="@drawable/black_line" />
    </LinearLayout>
</ScrollView>